# scsalvager471

./: .vercelignore  ADMIN_README.md  App.jsx  DESKTOP_README.md  PLAN-security-audit.md  PLAN-unit-tests.md  PRIVACY.md  README.md  TERMS.md  index.html  package-lock.json  package.json  prices.js  vercel.json  vite.config.js
.github/workflows/: announce-release.yml  desktop-release.yml  post-message.yml
api/: announcements.js  guest-login.js  ledger.js  patches.js  prices.js  stats.js
api/__tests__/: discord.test.js  discordBot.test.js  ledger.test.js  prefs.test.js  prices.test.js  session.test.js
api/_lib/: admin.js  discord.js  discordBot.js  guestLogins.js  ledgerOps.js  patches.js  prefs.js  qstash.js  redis.js  session.js  userIndex.js
api/admin/: active-refineries.js  announcement.js  broadcast-message.js  clear-all-users-ledger.js  clear-announcements.js  clear-user-ledger.js  delete-ledger-entry.js  edit-ledger-entry.js  export.js  force-logout-all.js  guest-logins.js  inbox-overview.js  inbox.js  message-user.js  patches.js  user-history.js  users.js
api/auth/: callback.js  desktop-callback.js  login.js  logout.js  me.js  notifications-callback.js  notifications-link.js
api/desktop/: downloads.js  manifest.js  release-notes.js
api/me/: clear-ledger.js  contract.js  credit-crew-session.js  delete-account.js  heartbeat.js  prefs.js  rsi-verify.js
api/notifications/: deliver.js  disconnect.js  inbox.js  test.js
api/refinery/: analyze.js
api/sell/: analyze.js
api/users/: directory.js
desktop/: .gitignore  PLAN.md  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
src/: App.jsx  refineryConfig.js
(+4 files in other folders)
