[package]
name = "scsalvager-desktop"
version = "0.1.0"
description = "SCSalvager Desktop — Tauri shell wrapping scsalvager.net."
authors = ["SCSalvager.net"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "scsalvager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-single-instance = { version = "2.0", features = ["deep-link"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
