[package]
name = "scsalvager-desktop"
version = "1.0.0"
description = "SCSalvager Desktop — Tauri shell wrapping scsalvager.net."
authors = ["SCSalvager.net"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "scsalvager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-single-instance = { version = "2.0", features = ["deep-link"] }
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
xcap = "0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
